helm/manifests/listmonk/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listmonk
  namespace: listmonk
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - "$DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /listmonk
      backendRefs:
        - name: listmonk
          port: 9000
